--- a/partake-android/app/src/main/AndroidManifest.xml
+++ b/partake-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.partake.partake">
+    package="com.partake.partake" >
 
     <application
         android:allowBackup="true"
@@ -8,31 +8,37 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Partake">
+        android:theme="@style/Theme.Partake" >
         <activity
+            android:name=".addstuff"
+            android:exported="false"
+            android:parentActivityName=".homepage"
             android:theme="@style/fancy"
+            />
+        <activity
             android:name=".wallet"
             android:exported="false"
-            android:parentActivityName=".homepage"/>
+            android:parentActivityName=".homepage"
+            android:theme="@style/fancy" />
         <activity
-            android:theme="@style/fancy"
             android:name=".foodtypes"
             android:exported="false"
-            android:parentActivityName=".homepage"/>
+            android:parentActivityName=".homepage"
+            android:theme="@style/fancy" />
         <activity
-            android:theme="@style/fancy"
             android:name=".profilePage"
             android:exported="false"
-            android:parentActivityName=".homepage"/>
+            android:parentActivityName=".homepage"
+            android:theme="@style/fancy" />
         <activity
-            android:theme="@style/fancy"
             android:name=".homepage"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/fancy" />
         <activity
-            android:theme="@style/Theme.Partake"
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Partake" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
